--- a/templates/user/notifications.html.twig
+++ b/templates/user/notifications.html.twig
@@ -3,5 +3,5 @@
 
 {% block content %}
 <h1>Hello {{ user_first_name }}!</h1>
-<p>У вас новых уведомлений {{ notifications|length }}</p
+<p>У вас новых уведомлений: {{ notifications|length }}</p
 {% endblock  %}
