--- a/templates/user/notifications.html.twig
+++ b/templates/user/notifications.html.twig
@@ -2,6 +2,6 @@
 {% extends 'base.html.twig' %}
 
 {% block content %}
-<h1>Hello {{ user_first_name }}!</h1>
+<h1>Hello, {{ user_first_name }}!</h1>
 <p>У вас новых уведомлений: {{ notifications|length }}</p
 {% endblock  %}
